<resources>
    <string name="app_name">mPos</string>

    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonClearMemory">MC</string>
    <string name="buttonAddToMemory">M+</string>
    <string name="buttonSubtractFromMemory">M-</string>
    <string name="buttonRecallMemory">MR</string>
    <string name="buttonSquareRoot">√</string>
    <string name="buttonSquared">x²</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonSine">sin</string>
    <string name="buttonCosine">cos</string>
    <string name="buttonTangent">tan</string>
    <string name="title_activity_m_finance">mFinance</string>
    <string name="all_items">All Items</string>
    <string name="stock_categories">Categories</string>
    <string name="but_all_discount">Discounts</string>
    <string name="search_all_items">Search All Items</string>


    <string name="mpu_fa_bank" translatable="false"></string>
    <string name="mpu_fa_close" translatable="false"></string>
    <string name="mpu_fa_compress" translatable="false"></string>
    <string name="mpu_fa_credit_card" translatable="false"></string>
    <string name="mpu_fa_email" translatable="false"></string>
    <string name="mpu_fa_history" translatable="false"></string>
    <string name="mpu_fa_info" translatable="false"></string>
    <string name="mpu_fa_lock" translatable="false"></string>
    <string name="mpu_fa_print" translatable="false"></string>
    <string name="mpu_fa_search" translatable="false"></string>
    <string name="mpu_fa_th" translatable="false"></string>
    <string name="mpu_fa_times_circle" translatable="false"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
