<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/functionPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="right"
            android:maxLines="1"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"
            android:background="@drawable/curved_borders"
            android:textColor="#fff20300"
            android:textStyle="bold"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >

        <Button

            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button7"
            android:textSize="25sp"
            android:layout_margin="3dp" />

        <Button

            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button8"
            android:textSize="25sp"
            android:layout_margin="3dp" />

        <Button

            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button9"
            android:textSize="25sp"
            android:layout_margin="3dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >

        <Button

            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button4"
            android:textSize="25sp"
            android:layout_margin="3dp" />

        <Button

            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button5"
            android:textSize="25sp"
            android:layout_margin="3dp" />

        <Button

            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button6"
            android:textSize="25sp"
            android:layout_margin="3dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".24"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50"
                android:textSize="25sp" >

                <Button

                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button1"
                    android:textSize="25sp"
                    android:layout_margin="3dp" />

                <Button

                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button2"
                    android:textSize="25sp"
                    android:layout_margin="3dp" />

                <Button


                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button3"
                    android:textSize="25sp"
                    android:layout_margin="3dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50" >

                <Button

                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:text="@string/button0"
                    android:textSize="25sp"
                    android:layout_margin="3dp" />

                <Button

                    android:id="@+id/buttonDecimalPoint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:text="@string/buttonDecimalPoint"
                    android:textSize="25sp"
                    android:layout_margin="3dp" />
                <Button

                    android:id="@+id/buttonClear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:text="@string/buttonClear"
                    android:textSize="25sp"
                    android:layout_margin="3dp" />

                <Button
                    android:padding="50dp"

                    android:id="@+id/buttonEquals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="0dp"
                    android:layout_gravity="bottom"
                    android:textStyle="bold"
                    android:textColor="#f4000000"
                    android:textAlignment="center"
                    android:layout_weight=".34"
                    android:layout_margin="3dp"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>